--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -1,8 +1,8 @@
 <html>
     <head>
         <title>Flask-ChatApp: {{ room }}</title>
-        <script type="text/javascript" src="https://code.jquery.com/jquery-1.4.2.min.js"></script>
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+        <script type="text/javascript" src="//code.jquery.com/jquery-1.4.2.min.js"></script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
         <script type="text/javascript" charset="utf-8">
             let socketio;
             $(document).ready(function(){
